# TGMangaParser

./: Makefile  README.md  pyproject.toml  setup.cfg
src/: app.py  consts.py  create_db.py  database.py  manga_parser.py  model.py  utils.py
