[tool.poetry]
name = "manga-parser"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytelegrambotapi = "^4.16.1"
selenium = "^4.18.1"
beautifulsoup4 = "^4.12.3"
unify = "^0.5"
isort = "^5.13.2"
black = "^24.2.0"
mypy = "^1.8.0"
tqdm = "^4.66.2"
pydantic = "^2.6.4"
pymongo = "^4.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
